Update project config