@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
 	<properties>
 		<java.version>17</java.version>
@@ -10,11 +11,12 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 
 		<cfsVersion>1.0-SNAPSHOT</cfsVersion>
+
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
-	<modelVersion>4.0.0</modelVersion>
-
+	<groupId>com.github.lapissea</groupId>
 	<artifactId>jdatablockfs.run</artifactId>
+	<version>${cfsVersion}</version>
 
 	<dependencies>
 		<dependency>
@@ -23,10 +25,32 @@
 			<version>${cfsVersion}</version>
 		</dependency>
 		<dependency>
-			<artifactId>jdatablockfs</artifactId>
-			<groupId>com.github.lapissea</groupId>
-			<version>${cfsVersion}</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<version>5.7.2</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+				<configuration>
+					<release>${maven.compiler.release}</release>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
